--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,45 +1,129 @@
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #FFFFFF;
+}
+
+main {
+  padding: 100px 200px;
+}
+
+.destaque {
+  text-align: center;
+}
+
+.destaque h1 {
+  font-size: 30px;
+}
+
+.destaque p {
+  text-align: center;
+  font-size: larger;
+  color:rgb(75 85 99);
+}
+
 .card-noticia {
-    border: 1px solid rgba(0,0,0,0.07); /* ~7 % de preto */    
-    border-radius: 15px;
-    text-align: justify;
-    height: 612px;
-    width: 612px;
-    margin: 35px;
-    box-sizing: border-box;
-}
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  border-radius: 15px;
+  text-align: justify;
+  height: 670px;
+  width: 670px;
+  margin: 20px;
+  box-sizing: border-box;
+  float: left;
 
-.card-noticia img {
-    height: 350px;
-    width: 100%;
-    display: block;
-    border: none;
-}
-
-.card-body {
-    padding: 20px;
-}
-
-.card-noticia h3 {
-    font-size: 22px;
-    margin-top: 25px;
-
-}
-
-.card-noticia p {
-    margin-top: 25px;
-}
-
-.card-body a {
-  display: inline-block;
-  padding: 6px 12px;
-  background: #f5f5f5;
-  border-radius: 6px;
-  font-weight: 600;
-  color: #333;
 }
 
 .card-noticia:hover {
-  box-shadow: 0 8px 24px rgba(0,0,0,0.15);
-
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
 }
 
+.card-noticia img {
+  height: 350px;
+  width: 100%;
+  display: block;
+  border: none;
+}
+
+.card-body {
+  padding: 24px;
+}
+
+.card-body h5 {
+  display: inline-block;
+  padding: 2px 12px;
+  background: #f5f5f5;
+  border-radius: 25px;
+  font-weight: 600;
+  color: #333;
+  text-align: end;
+  text-decoration: none;
+  margin: 0;
+}
+
+.card-noticia h3 {
+  font-size: 22px;
+  margin-top: 10px;
+}
+
+.card-noticia p {
+  margin-top: 25px;
+}
+
+.principal {
+  display: flex;
+  flex-direction: row;
+  width: 1380px;
+  height: 680px;
+  overflow: hidden;
+  /* corta qualquer transbordo     */
+}
+
+.principal img {
+  flex: 0 0 50%;
+  /* ocupa 50% da largura, sem crescer */
+  height: 100%;
+  /* igual à altura do card         */
+  object-fit: cover;
+  /* mantém proporção e corta excesso*/
+}
+
+.principal .card-body {
+  flex: 1;
+  /* resto do espaço                */
+  padding: 40px 48px;
+}
+
+.card-body h5 {
+  display: inline-block;
+  padding: 2px 12px;
+  background: #f5f5f5;
+  border-radius: 25px;
+  font-weight: 600;
+  color: #333;
+  text-align: end;
+  text-decoration: none;
+  margin: 0;
+}
+
+.card-body a {
+  display: flex;
+  margin-left: auto;
+  gap: 15px;
+  width: max-content;
+  text-align: end;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  text-decoration: none;
+  align-items: center;
+}
+
+.card-body a:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.card-body a .icone {
+  width: 16px;
+  height: 16px;
+}
