--- a/css/produtos.css
+++ b/css/produtos.css
@@ -3,7 +3,7 @@
     max-width: 1268px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 30px;
     padding: 20px;
 }
 
@@ -24,9 +24,38 @@
 
 
 .card-produto img {
-    display: block;
     width: 100%;
-    height: 45%;
+    height: 100%;
+}
+
+.card-produto .header {
+    position: relative;
+    height: 50%;
+}
+
+.badge-porcentagem, .badge-categoria {
+    position: absolute;
+    top: 10px;
+    font-size: 12px;
+    padding: 5px 10px;
+    border-radius: 12px; 
+}
+
+.badge-porcentagem {
+    left: 10px;
+    background: #e74c3c;
+    color: white;
+    font-weight: bold;
+}
+
+.badge-porcentagem:hover {
+    background-color: black;
+}
+
+ .badge-categoria {
+    right: 10px;
+    background: #f1f1f1;
+    color: #333;
 }
 
 .card-produto .body {
@@ -53,5 +82,5 @@
 }
 
 .btn:hover {
-     transform: scale(1.03);
+    transform: scale(1.03);
 }
