--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,44 +1,51 @@
 .container {
     margin: 0 auto;
-    max-width: 1268px;
+    max-width: 75%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 .card-produto {
     display: flex;
     border: 1px solid rgba(0, 0, 0, 0.07);
-    height: 500px;
+    max-height: 600px;
+    height: 100%;
     width: 100%;
     box-sizing: border-box;
     border-radius: 8px;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .card-produto:hover {
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
 }
 
-
 .card-produto img {
-    width: 100%;
-    height: 100%;
+    height: auto;
+    max-width: 100%;
+    object-fit: contain;
+    display: block;
 }
 
 .card-produto .header {
+    height: 65%;
+    overflow: hidden;
     position: relative;
-    height: 50%;
+    background-color: #f5f5f5;
 }
 
-.badge-porcentagem, .badge-categoria {
+.badge-porcentagem,
+.badge-categoria {
     position: absolute;
     top: 10px;
     font-size: 12px;
     padding: 5px 10px;
-    border-radius: 12px; 
+    border-radius: 12px;
 }
 
 .badge-porcentagem {
@@ -52,10 +59,10 @@
     background-color: black;
 }
 
- .badge-categoria {
+.badge-categoria {
     right: 10px;
-    background: #f1f1f1;
-    color: #333;
+    background-color: black;
+    color: white;
 }
 
 .card-produto .body {
@@ -81,6 +88,17 @@
     font-size: 25px;
 }
 
-.btn:hover {
-    transform: scale(1.03);
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .container {
+        max-width: 95%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width:768px) {
+    .container {
+        max-width: 95%;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
