--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,8 +1,7 @@
 .container {
     margin: 0 auto;
-    max-width: 672px;
+    max-width: 40%;
 }
-
 
 .btn-formulario {
     padding: 10px;
@@ -24,9 +23,12 @@
 .ofertas {
     text-align: center;
     border: 1px solid rgba(0, 0, 0, 0.07);
-    width: 300px;
     border-radius: 10px;
-    padding: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .ofertas h5 {
@@ -36,4 +38,14 @@
 .ofertas p {
     font-size: 12px;
     color: grey;
+}
+
+@media screen and (max-width: 1023px) {
+    .container {
+        max-width: 90%;
+    }
+
+    .grupo-ofertas {
+        flex-direction: column;
+    }
 }
