--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,11 +1,10 @@
 .container {
     margin: 0 auto;
-    max-width: 75%;
+    max-width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     padding: 20px;
-    flex-wrap: wrap;
 }
 
 .card-produto {
@@ -33,8 +32,8 @@
 }
 
 .card-produto .header {
-    height: 65%;
     overflow: hidden;
+    height: 65%;
     position: relative;
     background-color: #f5f5f5;
 }
@@ -90,15 +89,15 @@
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .container {
+   section > .container {
         max-width: 95%;
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media screen and (max-width:768px) {
-    .container {
+    section > .container {
         max-width: 95%;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
     }
 }
