--- a/css/base.css
+++ b/css/base.css
@@ -2,9 +2,15 @@ body {
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #FFFFFF;
+    display: grid;
+    grid-template-rows: auto 1fr auto
 }
 
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
 
 .destaque {
     text-align: center;
@@ -18,8 +24,9 @@ body {
     text-align: center;
     font-size: 20px;
     color: rgb(75 85 99);
+    width: 50%;
+    margin: 10px auto;
 }
-
 
 .formulario {
     border: 1px solid rgba(0, 0, 0, 0.07);
@@ -28,7 +35,8 @@ body {
 }
 
 .btn {
-    margin-top: 5px;
+    text-decoration: none;
+    margin: 10px auto;
     padding: 10px;
     background-color: black;
     color: white;
@@ -36,6 +44,15 @@ body {
     border-radius: 5px;
     text-align: center;
     font-size: large;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    border: none;
+}
+
+.btn:hover {
+    transform: scale(1.03);
+    background-color: #BD3832;
 }
 
 
