--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,9 @@
+:root {
+  --cor-principal: #BD3832;
+  --borda-padrao: 1px solid rgba(0, 0, 0, 0.07)
+}
+
+
 body {
     margin: 0;
     padding: 0;
@@ -8,7 +14,7 @@ body {
 
 html,
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
 }
 
@@ -18,7 +24,7 @@ body {
 
 .destaque h1 {
     font-weight: bold;
-    font-size: 35px;
+    font-size: 35px !important;
 }
 
 .destaque p {
@@ -30,7 +36,7 @@ body {
 }
 
 .formulario {
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     padding: 24px;
     border-radius: 8px;
 }
@@ -53,7 +59,7 @@ body {
 
 .btn:hover {
     transform: scale(1.03);
-    background-color: #BD3832;
+    background-color: var(--cor-principal);
 }
 
 
@@ -72,7 +78,7 @@ body {
 .campo textarea {
     width: 100%;
     border-radius: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     padding: 10px;
     margin: 5px 0;
     box-sizing: border-box;
