--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -22,7 +22,7 @@
 
 .ofertas {
     text-align: center;
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     border-radius: 10px;
     padding: 20px;
     display: flex;
