--- a/css/detalhamento-produto.css
+++ b/css/detalhamento-produto.css
@@ -19,7 +19,7 @@
 }
 
 .imagens .principal {
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     width: 100%;
     height: auto;
     border-radius: 10px;
@@ -49,7 +49,7 @@
 }
 
 .complementares img {
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     flex: 1;
     border-radius: 10px;
     max-width: 49%;
@@ -97,7 +97,7 @@ input[name="tamanho"] {
 }
 
 .tamanhos input[type="radio"]:checked+span {
-    background-color: #BD3832;
+    background-color: var(--cor-principal);
     color: white;
 }
 
@@ -115,7 +115,7 @@ input[name="tamanho"] {
 }
 
 form {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+    border-bottom: var(--borda-padrao);
 }
 
 .formas-pagamento {
@@ -142,7 +142,7 @@ form {
     align-items: center;
     display: flex;
     flex-direction: column;
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     padding: 20px 10px;
     width: 33%;
     text-align: center;
