--- a/css/produtos.css
+++ b/css/produtos.css
@@ -9,7 +9,7 @@
 
 .card-produto {
     display: flex;
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     max-height: 600px;
     height: 100%;
     width: 100%;
