--- a/css/sobreProjeto.css
+++ b/css/sobreProjeto.css
@@ -8,7 +8,7 @@ section .container {
 }
 
 .card {
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    border: var(--borda-padrao);
     border-radius: 8px;
     padding: 20px;
 }
