--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 :root {
-  --cor-principal: #BD3832;
-  --borda-padrao: 1px solid rgba(0, 0, 0, 0.07)
+    --cor-principal: #BD3832;
+    --borda-padrao: 1px solid rgba(0, 0, 0, 0.07)
 }
 
 
@@ -94,4 +94,11 @@ body {
     min-height: 100px;
     margin-bottom: 20px;
     font-size: larger;
+}
+
+
+@media screen and (max-width:768px) {
+    .destaque p {
+        font-size: 18px;
+    }
 }
