--- a/css/base.css
+++ b/css/base.css
@@ -3,19 +3,23 @@
     --borda-padrao: 1px solid rgba(0, 0, 0, 0.07)
 }
 
-
 body {
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
     display: grid;
-    grid-template-rows: auto 1fr auto
+    grid-template-rows: auto 1fr auto;
 }
 
 html,
 body {
     height: 100vh;
     margin: 0;
+}
+
+section .container {
+    margin: 0 auto;
+    display: flex;
 }
 
 .destaque {
@@ -62,7 +66,6 @@ body {
     background-color: var(--cor-principal);
 }
 
-
 .campo,
 .campo-radio {
     margin-top: 24px;
@@ -83,6 +86,7 @@ body {
     margin: 5px 0;
     box-sizing: border-box;
     font-size: medium;
+    background-color: #f8f9fa;
 }
 
 .campo input,
