--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,6 +1,14 @@
-.container {
-    margin: 0 auto;
+body {
+    background-color:#f8f9fa;
+}
+
+section .container {
     max-width: 40%;
+    flex-direction: column;
+}
+
+.formulario, .ofertas{
+    background-color: white;
 }
 
 .btn-formulario {
@@ -41,7 +49,7 @@
 }
 
 @media screen and (max-width: 1023px) {
-    .container {
+    section .container {
         max-width: 90%;
     }
 
