--- a/css/index.css
+++ b/css/index.css
@@ -13,12 +13,11 @@ body {
     background-color: #f9fafb;
 }
 
-
 section .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70%;
+    max-width: 70%;
     margin: 0 auto;
     padding: 50px;
     text-align: center;
