--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,5 +1,4 @@
-.container {
-    margin: 0 auto;
+section .container {
     max-width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -89,14 +88,14 @@
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-   section > .container {
+    section .container {
         max-width: 95%;
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media screen and (max-width:768px) {
-    section > .container {
+    section .container {
         max-width: 95%;
         grid-template-columns: 1fr;
     }
