--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,5 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 .apresentacao {
@@ -22,6 +20,7 @@ section .container {
     padding: 50px;
     text-align: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .cards {
@@ -51,7 +50,6 @@ section .container p {
     height: auto;
 }
 
-
 .btn {
     display: flex;
     align-items: center;
@@ -79,7 +77,6 @@ section .container p {
     border-radius: 8px;
     padding: 20px;
     margin: auto;
-    flex-wrap: wrap;
 }
 
 .card p {
@@ -102,12 +99,17 @@ footer p {
 }
 
 @media screen and (max-width: 1023px) {
+    section .container {
+        padding: 20px;
+        max-width: 95%;
+    }
+
     .cards {
         flex-direction: column;
     }
 
     .card {
-        width: 95%;
+        width: 90%;
     }
 }
 
@@ -121,13 +123,9 @@ footer p {
         font-size: 30px;
     }
 
-    section .container h3 {
+    section .container h3,
+    section .container .card p {
         font-size: 20px;
-    }
-
-    section .container p {
-        text-align: justify;
-        font-size: 25px;
     }
 
     footer p {
