--- a/css/noticias.css
+++ b/css/noticias.css
@@ -23,10 +23,13 @@
 }
 
 .card-body {
+  display: flex;
+  flex-direction: column;
   padding: 24px;
 }
 
 .card-noticia h3 {
+  font-weight: bold;
   font-size: 22px;
   margin-top: 10px;
 }
@@ -35,8 +38,9 @@
   margin-top: 25px;
 }
 
-
 .card-body .badge-categoria {
+  font-size: medium;
+  width: max-content;
   display: inline-block;
   padding: 2px 12px;
   background: #f5f5f5;
